# docs-ai-operating-model

./: .gitignore  .vale.ini  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: index.md  start-here.md
docs/adr/: adr-0001-pages-workflow.md  index.md
docs/evaluation/: framework.md  rubrics.md
docs/governance/: ai-policy.md  review-lanes.md  risk-register.md
docs/implementation/: pipeline.md  quality-gates.md
docs/promptops/: prompt-library.md  prompt-spec.md
docs/strategy/: decision-criteria.md  overview.md  use-cases.md
eval/datasets/: smoke.yml
prompts/: api_reference_enrichment.yml  release_notes_draft.yml
src/docsai_toolkit/: __init__.py  __main__.py
styles/DocsAI/: FillerWords.yml  Terminology.yml
